# android-image

./: .gitignore  myandroid.jks
app/: CMakeLists.txt  build.gradle  proguard-rules.pro
app/cnn_model/Caffe/: SavePycaffeModelInMessagePack.py
app/cnn_model/Caffe/model/: androidcnn.txt  mean.binaryproto  net.prototxt  para.caffemodel
app/cnn_model/Caffe/model/paras/: model_mean.msg  model_param_conv1.msg  model_param_conv2.msg  model_param_conv3.msg  model_param_f1.msg  model_param_fc2new.msg
app/libs/alexnet/: 1_def.txt
app/libs/alexnet/paras/: model_param_conv1.msg  model_param_conv2.msg  model_param_fc7.msg  model_param_fc8new.msg
app/src/androidTest/java/image/imageapp/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/NNPACK/: .gitignore
app/src/main/cpp/: CMakeLists.txt  hello-jni.c  main.cpp  native-lib.cpp  ndk_face_detection.cpp  ndk_nnpack.cpp
app/src/main/cpp/NNPACK/jni/: Application.mk
app/src/main/cpp/face_detection/: CDlibFace.cpp  CDlibFace.h  CMakeLists.txt
app/src/main/cpp/faceattribute/: CMakeLists.txt
app/src/main/cpp/faceattribute/model/model_eyes90/: eyes.json  eyes_label.txt  eyes_label.yml  eyes_mean.xml
app/src/main/cpp/faceattribute/model/model_light/: label.txt  light.json  light.params  light_mean.xml
app/src/main/cpp/faceattribute/model/model_mouth/: landmarks.txt  mouth_label.txt
app/src/main/cpp/faceattribute/model/model_mouth/caffe/: mouth.json  mouth.params  net.prototxt  train.caffemodel
app/src/main/cpp/faceattribute/model/model_mouth/caffe2.0/: mouth.json  mouth.params  net.prototxt  train.caffemodel
app/src/main/cpp/faceattribute/model/model_race/: race.json  race.params  race_label.yml  race_mean.xml
app/src/main/cpp/faceattribute/model/model_race/caffe/: deploy.prototxt  train.caffemodel
app/src/main/cpp/faceattribute/src/: CFaceAttribute.cpp  mutil_task.cpp
app/src/main/cpp/faceattribute/src/linux/: mxnet_predict-all.cc
app/src/main/cpp/faceattribute/src/nnpack/: mxnet_predict-all.cc
app/src/main/java/com/example/hellojni/: HelloJni.java
app/src/main/java/image/imageapp/: MainActivity.java
app/src/main/java/layers/: Convolution.java  Softmax.java
app/src/main/java/network/: CNNdroid.java
app/src/main/res/layout/: activity_hello_jni.xml  activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/image/imageapp/: ExampleUnitTest.java
