cmake_minimum_required(VERSION 3.5)
project(main_test)
find_package(OpenMP)
#message("fafd")
#if (OPENMP_FOUND)
 #   set (CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${OpenMP_C_FLAGS}")
  #  set (CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${OpenMP_CXX_FLAGS}")

#endif()
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11 ")
include_directories("NNPACK/include")
include_directories("NNPACK/deps/pthreadpool/include")
include_directories("NNPACK/deps/fxdiv/include")
link_directories("NNPACK/lib")
set(SOURCE_FILES main.cpp)
add_executable(main_test ${SOURCE_FILES} )
target_link_libraries(main_test libnnpack.a libpthreadpool.a pthread)